--- a/c-sharp-crud-api/c-sharp-crud-api/appsettings.json
+++ b/c-sharp-crud-api/c-sharp-crud-api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "",
+    "Identifier": ""
+  }
 }
