--- a/c-sharp-crud-api/c-sharp-crud-api/c-sharp-crud-api.csproj
+++ b/c-sharp-crud-api/c-sharp-crud-api/c-sharp-crud-api.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
