Remove project-specific imports
To make following this code sample easier, I've removed project-specific using statements, opting to explicitly use the namespace in code.

--- a/c-sharp-crud-api/c-sharp-crud-api/appsettings.json
+++ b/c-sharp-crud-api/c-sharp-crud-api/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "",
-    "Identifier": ""
+    "Domain": "<AUTH0_DOMAIN>",
+    "Identifier": "<AUTH0_API_IDENTIFIER>"
   }
 }
